{
    "version": 1,
    "name": "GInputActions",
    "maps": [
        {
            "name": "Keyboard",
            "id": "02c3c790-3b9b-4b39-baf3-d292613b3f78",
            "actions": [
                {
                    "name": "SoftDrop",
                    "type": "Button",
                    "id": "f3ddc5af-91ce-4a85-8675-055cd84b33c1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HardDrop",
                    "type": "Button",
                    "id": "10e60623-611b-49c9-9266-700d37e13bda",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "d95ecdcb-0a22-4ece-aeb9-f0287b266ac5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "5a8cdb95-2112-434a-934f-5d419900d1f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "f444c517-bc83-4d6d-b346-efc4d3a7fb48",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "d21adb06-c56d-45f1-b57b-9cf13167373a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "112cc900-9bb3-41ed-bfd8-6fc700cceff9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a8b7afa-6ed6-44e3-bfa0-583b6d0408a5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoftDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f43da482-62f9-4f0c-be9a-3789ad4c8c83",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HardDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3f46a77-83cc-4ec3-8ee7-6b0de05d9198",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b01f9720-7906-4ee6-a6fe-d5990a59ca20",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97a7cbb1-c3a8-42c4-b7c9-c30ff436dd55",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fabd45cb-e90a-460f-9f1c-c8999742aa8c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36189a28-95c6-49e2-aab6-803c9afafcf5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mobile",
            "id": "5663782a-cdb2-462b-901f-2f61318c4f65",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}